--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Kerem Zopcuk</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<header class="site-header">
+    <h1>Kerem Zopcuk</h1>
+    <nav class="header-nav">
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
 
 </body>
 </html>
