feat: add task 1.7 into portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <style type="text/css">
+        .gist {width:500px !important;}
+        .gist-file
+        .gist-data {max-height: 500px;max-width: 500px;}
+    </style>
 </head>
 <body>
 <header class="site-header">
@@ -17,6 +22,16 @@
         <a href="#">Contact</a>
     </nav>
 </header>
+<main>
+    <section>
+        <h2>Tasks</h2>
+        <div class="single-task">
+            <h3>1.7: HTML Wireframe</h3>
+            <a href="tasks/01/1-7_HTML-Wireframe.html">Live Demo</a>
+            <script  src="https://gist.github.com/m0xai/8cd9be3910f2d0c1c4dfc2d9b9780731.js"></script>
+        </div>
+    </section>
+</main>
 
 </body>
 </html>
