feat: add Loesungen fuer Aufgabe 2.3

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
             <a class="live-demo-link" href="src/tasks/01/1-7_HTML-Wireframe.html">Live Demo</a>
             <script  src="https://gist.github.com/m0xai/8cd9be3910f2d0c1c4dfc2d9b9780731.js"></script>
         </div>
+        <hr>
+        <div class="single-task">
+            <h3>2.3: CSS-Positionierung</h3>
+            <h3>Loesung zu 1. Video</h3>
+            <a class="live-demo-link" href="src/tasks/02/3-erste-video.html">Live Demo</a>
+            <script src="https://gist.github.com/m0xai/e98bfd72b8833e17731025cdceb73cd9.js"></script>
+        </div>
+        <hr>
+        <div class="single-task">
+            <h3>2.3: CSS-Positionierung</h3>
+            <h3>Loesung zu 2. Video</h3>
+            <a class="live-demo-link" href="src/tasks/02/3-zweite-video.html">Live Demo</a>
+            <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
+        </div>
     </section>
 </main>
 
