--- a/index.html
+++ b/index.html
@@ -34,15 +34,27 @@
         <div class="single-task">
             <h3>2.3: CSS-Positionierung</h3>
             <h3>Loesung zu 1. Video</h3>
-            <a class="live-demo-link" href="src/tasks/02/3-erste-video.html">Live Demo</a>
+            <a class="live-demo-link" href="src/tasks/02/2-erste-video.html">Live Demo</a>
             <script src="https://gist.github.com/m0xai/e98bfd72b8833e17731025cdceb73cd9.js"></script>
         </div>
         <hr>
         <div class="single-task">
             <h3>2.3: CSS-Positionierung</h3>
             <h3>Loesung zu 2. Video</h3>
-            <a class="live-demo-link" href="src/tasks/02/3-zweite-video.html">Live Demo</a>
+            <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
             <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
+            <h3>Loesung zu 2. Video</h3>
+            <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
+            <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
+        </div>
+        <hr>
+        <div class="single-task">
+            <h3>3.1 Responsiv mit Flexbox und Desktop-First</h3>
+            <a class="live-demo-link" href="src/tasks/03/1-resp-mit-flexbox.html">Live Demo</a>
+            <script src="https://gist.github.com/m0xai/49378a980c8228501475d50fe3103f5f.js"></script>
+            <h3>3.2 Responsiv mit Grid und Mobile-First</h3>
+            <a class="live-demo-link" href="src/tasks/03/2-resp-mit-grid.html">Live Demo</a>
+            <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
         </div>
     </section>
 </main>
