feat(home): add task 6.1 into home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Kerem Zopcuk</title>
@@ -7,57 +8,69 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lato&family=Poppins:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <style type="text/css">
-        .gist {width:500px !important;}
-        .gist-file
-        .gist-data {max-height: 500px;max-width: 500px;}
+        .gist {
+            width: 500px !important;
+        }
+
+        .gist-file .gist-data {
+            max-height: 500px;
+            max-width: 500px;
+        }
     </style>
 </head>
+
 <body>
-<header class="site-header">
-    <h1>Kerem Zopcuk</h1>
-    <nav class="header-nav">
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-    </nav>
-</header>
-<main>
-    <section>
-        <h2>Tasks</h2>
-        <div class="single-task">
-            <h3>1.7: HTML Wireframe</h3>
-            <a class="live-demo-link" href="src/tasks/01/1-7_HTML-Wireframe.html">Live Demo</a>
-            <script  src="https://gist.github.com/m0xai/8cd9be3910f2d0c1c4dfc2d9b9780731.js"></script>
-        </div>
-        <hr>
-        <div class="single-task">
-            <h3>2.3: CSS-Positionierung</h3>
-            <h3>Loesung zu 1. Video</h3>
-            <a class="live-demo-link" href="src/tasks/02/2-erste-video.html">Live Demo</a>
-            <script src="https://gist.github.com/m0xai/e98bfd72b8833e17731025cdceb73cd9.js"></script>
-        </div>
-        <hr>
-        <div class="single-task">
-            <h3>2.3: CSS-Positionierung</h3>
-            <h3>Loesung zu 2. Video</h3>
-            <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
-            <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
-            <h3>Loesung zu 2. Video</h3>
-            <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
-            <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
-        </div>
-        <hr>
-        <div class="single-task">
-            <h3>3.1 Responsiv mit Flexbox und Desktop-First</h3>
-            <a class="live-demo-link" href="src/tasks/03/1-resp-mit-flexbox.html">Live Demo</a>
-            <script src="https://gist.github.com/m0xai/49378a980c8228501475d50fe3103f5f.js"></script>
-            <h3>3.2 Responsiv mit Grid und Mobile-First</h3>
-            <a class="live-demo-link" href="src/tasks/03/2-resp-mit-grid.html">Live Demo</a>
-            <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
-        </div>
-    </section>
-</main>
+    <header class="site-header">
+        <h1>Kerem Zopcuk</h1>
+        <nav class="header-nav">
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Tasks</h2>
+            <div class="single-task">
+                <h3>1.7: HTML Wireframe</h3>
+                <a class="live-demo-link" href="src/tasks/01/1-7_HTML-Wireframe.html">Live Demo</a>
+                <script src="https://gist.github.com/m0xai/8cd9be3910f2d0c1c4dfc2d9b9780731.js"></script>
+            </div>
+            <hr>
+            <div class="single-task">
+                <h3>2.3: CSS-Positionierung</h3>
+                <h3>Loesung zu 1. Video</h3>
+                <a class="live-demo-link" href="src/tasks/02/2-erste-video.html">Live Demo</a>
+                <script src="https://gist.github.com/m0xai/e98bfd72b8833e17731025cdceb73cd9.js"></script>
+            </div>
+            <hr>
+            <div class="single-task">
+                <h3>2.3: CSS-Positionierung</h3>
+                <h3>Loesung zu 2. Video</h3>
+                <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
+                <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
+                <h3>Loesung zu 2. Video</h3>
+                <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
+                <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
+            </div>
+            <hr>
+            <div class="single-task">
+                <h3>3.1 Responsiv mit Flexbox und Desktop-First</h3>
+                <a class="live-demo-link" href="src/tasks/03/1-resp-mit-flexbox.html">Live Demo</a>
+                <script src="https://gist.github.com/m0xai/49378a980c8228501475d50fe3103f5f.js"></script>
+                <h3>3.2 Responsiv mit Grid und Mobile-First</h3>
+                <a class="live-demo-link" href="src/tasks/03/2-resp-mit-grid.html">Live Demo</a>
+                <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
+            </div>
+            <div class="single-task">
+                <h3>6.1 Klammerpaare </h3>
+                <a class="live-demo-link" href="src/tasks/06/klammerpaare.html">Live Demo</a>
+            </div>
+        </section>
+    </main>
 
 </body>
+
 </html>
