--- a/src/tasks/06/klammerpaare.html
+++ b/src/tasks/06/klammerpaare.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Klammerpaare</h1>
     <div>
         <label for="pre-list-input">Pre Symbol</label>
         <input class="symbol-input" id="pre-list-input" type="text" maxlength="1" />
