feat: show the solution (6.1) in homepage

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             <a class="live-demo-link" href="src/tasks/03/2-resp-mit-grid.html">Live Demo</a>
             <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
         </div>
+        <div class="single-task">
+            <h3>6.1 Klammerpaare</h3>
+            <a class="live-demo-link" href="src/tasks/06/klammerpaare.html">Live Demo</a>
+        </div>
     </section>
 </main>
 
