feat: show the solution (8.1, 8.2, 8.3) in homepage

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
             <h3>6.1 Klammerpaare</h3>
             <a class="live-demo-link" href="src/tasks/06/klammerpaare.html">Live Demo</a>
         </div>
+        <div class="single-task">
+            <h3>8.1 Promises</h3>
+            <a class="live-demo-link" href="src/tasks/08/01.html">Live Demo</a>
+        </div>
+        <div class="single-task">
+            <h3>8.2 async/await</h3>
+            <a class="live-demo-link" href="src/tasks/08/02.html">Live Demo</a>
+        </div>
+        <div class="single-task">
+            <h3>8.3 WWW-Navigator</h3>
+            <a class="live-demo-link" href="src/tasks/08/03.html">Live Demo</a>
+        </div>
     </section>
 </main>
 
