feat: show solutions of task 9 in home page

--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
             <h3>8.3 WWW-Navigator</h3>
             <a class="live-demo-link" href="src/tasks/08/03.html">Live Demo</a>
         </div>
+        <div class="single-task">
+            <h3>9.1 SVG Show</h3>
+            <iframe width="500" height="500" src="./src/tasks/09/01.html" title="Solution of 09.1"></iframe>
+        </div>
+        <div class="single-task">
+            <h3>9.2 Balkendiagramm Animiert</h3>
+            <iframe width="500" height="400" src="./src/tasks/09/02.html" title="Solution of 09.2"></iframe>
+        </div>
+        <div class="single-task">
+            <h3>9.3 Tic Tac Toe</h3>
+            <iframe width="500" height="400" src="./src/tasks/09/03.html" title="Solution of 09.2"></iframe>
+        </div>
     </section>
 </main>
 
