feat: create initial sidebar component

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kerem Zopcuk</title>
+    <title>Persönliche Portfolio von Kerem Z.</title>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,14 +16,18 @@
 </head>
 <body>
 <header class="site-header">
-    <h1>Kerem Zopcuk</h1>
+    <h1>Kerem Zopcuk - Portfolio</h1>
     <nav class="header-nav">
         <a href="#">About</a>
         <a href="#">Contact</a>
     </nav>
 </header>
-<main>
-    <section>
+<main class="wrapper">
+    <aside class="sidebar">
+        <div class="avatar">Avatar</div>
+        Bu bir yan menu
+    </aside>
+    <section class="content">
         <h2>Tasks</h2>
         <div class="single-task">
             <h3>1.7: HTML Wireframe</h3>
