feat: add quick navigation link into sidebar via id attribute single tasks

--- a/index.html
+++ b/index.html
@@ -25,17 +25,28 @@
 <main class="wrapper">
     <aside class="sidebar">
         <div class="avatar">Avatar</div>
-        Bu bir yan menu
+        <ul>
+            <li><a href="#task1-7">Task 1.7</a></li>
+            <li><a href="#task2-3">Task 2.3</a></li>
+            <li><a href="#task3-1">Task 3.1</a></li>
+            <li><a href="#task6-1">Task 6.1</a></li>
+            <li><a href="#task8-1">Task 8.1</a></li>
+            <li><a href="#task8-2">Task 8.2</a></li>
+            <li><a href="#task8-3">Task 8.3</a></li>
+            <li><a href="#task9-1">Task 9.1</a></li>
+            <li><a href="#task9-2">Task 9.2</a></li>
+            <li><a href="#task9-3">Task 9.3</a></li>
+        </ul>
     </aside>
     <section class="content">
         <h2>Tasks</h2>
-        <div class="single-task">
+        <div id="task1-7" class="single-task">
             <h3>1.7: HTML Wireframe</h3>
             <a class="live-demo-link" href="src/tasks/01/1-7_HTML-Wireframe.html">Live Demo</a>
             <script  src="https://gist.github.com/m0xai/8cd9be3910f2d0c1c4dfc2d9b9780731.js"></script>
         </div>
         <hr>
-        <div class="single-task">
+        <div id="task2-3" class="single-task">
             <h3>2.3: CSS-Positionierung</h3>
             <h3>Loesung zu 1. Video</h3>
             <a class="live-demo-link" href="src/tasks/02/2-erste-video.html">Live Demo</a>
@@ -52,7 +63,7 @@
             <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
         </div>
         <hr>
-        <div class="single-task">
+        <div id="task3-1" class="single-task">
             <h3>3.1 Responsiv mit Flexbox und Desktop-First</h3>
             <a class="live-demo-link" href="src/tasks/03/1-resp-mit-flexbox.html">Live Demo</a>
             <script src="https://gist.github.com/m0xai/49378a980c8228501475d50fe3103f5f.js"></script>
@@ -60,31 +71,31 @@
             <a class="live-demo-link" href="src/tasks/03/2-resp-mit-grid.html">Live Demo</a>
             <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
         </div>
-        <div class="single-task">
+        <div id="task6-1" class="single-task">
             <h3>6.1 Klammerpaare</h3>
             <a class="live-demo-link" href="src/tasks/06/klammerpaare.html">Live Demo</a>
         </div>
-        <div class="single-task">
+        <div id="task8-1" class="single-task">
             <h3>8.1 Promises</h3>
             <a class="live-demo-link" href="src/tasks/08/01.html">Live Demo</a>
         </div>
-        <div class="single-task">
+        <div id="task8-2" class="single-task">
             <h3>8.2 async/await</h3>
             <a class="live-demo-link" href="src/tasks/08/02.html">Live Demo</a>
         </div>
-        <div class="single-task">
+        <div id="task8-3" class="single-task">
             <h3>8.3 WWW-Navigator</h3>
             <a class="live-demo-link" href="src/tasks/08/03.html">Live Demo</a>
         </div>
-        <div class="single-task">
+        <div id="task9-1" class="single-task">
             <h3>9.1 SVG Show</h3>
             <iframe width="500" height="500" src="./src/tasks/09/01.html" title="Solution of 09.1"></iframe>
         </div>
-        <div class="single-task">
+        <div id="task9-2" class="single-task">
             <h3>9.2 Balkendiagramm Animiert</h3>
             <iframe width="500" height="400" src="./src/tasks/09/02.html" title="Solution of 09.2"></iframe>
         </div>
-        <div class="single-task">
+        <div id="task9-3" class="single-task">
             <h3>9.3 Tic Tac Toe</h3>
             <iframe width="500" height="400" src="./src/tasks/09/03.html" title="Solution of 09.2"></iframe>
         </div>
